set dark mode on page load to prevent user from being flashbanged

--- a/ratatoskr/static/scss/app/darkmode.scss
+++ b/ratatoskr/static/scss/app/darkmode.scss
@@ -6,7 +6,7 @@ html:not(.dark-root) {
     }
 }
 
-.dark-root {
+.dark-root, .anti-flashbang:not(.light-root) {
     * {
         --bs-body-bg: #121212;
         --bs-body-color: #dddddd;
